# pokeget-rs

./: CHANGELOG.md  Cargo.toml  out.txt
src/: cli.rs  data.rs  lib.rs  main.rs  sprites.rs
