[package]
name = "pokeget"
authors = [ "talwat" ]
version = "1.5.0"
edition = "2021"
description = "Display Pokémon sprites in your terminal."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/talwat/pokeget-rs"
homepage = "https://github.com/talwat/pokeget-rs"
repository = "https://github.com/talwat/pokeget-rs"

[features]
# gen8 sprites are always included
gen7 = [] # include gen7 sprites & flag

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = [
    "png",
    "rgb",
] }
rand = "0.8.5"
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
showie = "1.0.0"